--- a/BrickBreaker/WebApplication2/GamePage.html
+++ b/BrickBreaker/WebApplication2/GamePage.html
@@ -16,6 +16,7 @@ and open the template in the editor.
         <canvas id="gamePage" width="1024" height="640">
             <script src="Bar.js" type="text/javascript"></script>
             <script src="Ball.js" type="text/javascript"></script>
+            <script src="BaseBrick.js" type="text/javascript"></script>
             <script src="Main.js" type="text/javascript"></script>
         </canvas>
     </div>
